update base path
