# transports/http/invoices.go
@@ -33,7 +33,7 @@ func (i *invoices) RegisterRoutes(g *echo.Group) {
 // @Accept json
 // @Produce json
 // @Success 200
-// @Router v1/invoices [GET].
+// @Router /v1/invoices [GET].
 func (i *invoices) invoices(e echo.Context) error {
 	ii, err := i.svc.Invoices(e.Request().Context())
 	if err != nil {
@@ -50,7 +50,7 @@ func (i *invoices) invoices(e echo.Context) error {
 // @Produce json
 // @Param invoiceID path string true "Invoice ID"
 // @Success 200
-// @Router v1/invoices/{invoiceID} [GET].
+// @Router /v1/invoices/{invoiceID} [GET].
 func (i *invoices) invoice(e echo.Context) error {
 	var args payd.InvoiceArgs
 	if err := e.Bind(&args); err != nil {
@@ -71,7 +71,7 @@ func (i *invoices) invoice(e echo.Context) error {
 // @Produce json
 // @Param body body payd.InvoiceCreate true "Reference and Satoshis"
 // @Success 201
-// @Router v1/invoices [POST].
+// @Router /v1/invoices [POST].
 func (i *invoices) create(e echo.Context) error {
 	var req payd.InvoiceCreate
 	if err := e.Bind(&req); err != nil {
@@ -93,7 +93,7 @@ func (i *invoices) create(e echo.Context) error {
 // @Param invoiceID path string true "invoiceID we want to remove"
 // @Success 200
 // @Failure 404 {object} payd.ClientError "returned if the paymentID has not been found"
-// @Router v1/invoices/{invoiceID} [DELETE].
+// @Router /v1/invoices/{invoiceID} [DELETE].
 func (i *invoices) delete(e echo.Context) error {
 	var args payd.InvoiceArgs
 	if err := e.Bind(&args); err != nil {
